[tool.poetry]
name = "repl_nix_Spruce"
version = "0.1.0"
description = ""
authors = ["Hunter87 hunter87@sprucebot.tech"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
discord = "^2.2.3"
gTTS = "^2.3.2"
humanfriendly = "^10.0"
openai = "^0.27.7"
pymongo = "^4.3.3"
requests = "^2.30.0"
Wavelink = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
