[project]
name = "spruce"
version = "2.1.0"
description = "An open-source multi-functional Discord app designed to streamline the management of Discord esports and servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "bs4>=0.0.2",
    "cachetools>=5.5.2",
    "cashfree-pg>=4.0.0",
    "dateparser>=1.2.1",
    "discord-py==2.5.2",
    "google-generativeai>=0.8.5",
    "gtts>=2.3.2",
    "html5lib>=1.1",
    "humanfriendly>=10.0",
    "psutil>=7.0.0",
    "pymongo>=4.12.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "wavelink>=3.4.0",
]
